# terrarium-sensor

./: .env.example  README.md  bh1750.py  dht22.py  main.py  pyproject.toml
demo/: bh1750_demo.py  dht22_demo.py  lcd_demo.py
