[tool.poetry]
name = "terrarium-sensor"
version = "0.1.0"
description = ""
authors = ["Torai Lin <torailin55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.10"
adafruit-circuitpython-dht = "^4.0.4"
"RPi.GPIO" = "^0.7.1"
smbus2 = "^0.4.3"
RPLCD = "^1.3.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
